--- a/sitio/package.json
+++ b/sitio/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
